--- a/app/styles/au/_au-components.scss
+++ b/app/styles/au/_au-components.scss
@@ -28,7 +28,7 @@
 @import "ember-appuniversum/c-hr";
 @import "ember-appuniversum/c-icon";
 // @import "ember-appuniversum/c-input";
-// @import "ember-appuniversum/c-label";
+@import "ember-appuniversum/c-label";
 @import "ember-appuniversum/c-link";
 @import "ember-appuniversum/c-list";
 @import "ember-appuniversum/c-list-horizontal";
