--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -102,7 +102,7 @@
               </Auk::Avatar>
             </Menu.Item>
             <Auk::Menu::Divider />
-            <Menu.Item @route="mock-login-route"
+            <Menu.Item
               {{on "click" this.switch}}
               data-test-m-header-user-action-logout
             >
