KAS-3545 add translation instead of hardcoded string

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -14,7 +14,7 @@
           @iconAlignment="left"
           href={{this.selectedVersion.file.namedDownloadLink}}
           download
-        >Downloaden</AuLinkExternal>
+        >{{t "download-2"}}</AuLinkExternal>
       {{/if}}
     </span>
   </:title>
