--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -239,7 +239,7 @@
             {{/if}}
           </div>
         </c.header>
-        {{#if this.isUploadingNewVersion}}
+        {{#if this.isUploadingReplacementFile}}
           <c.content>
             <Auk::FileUploader
               @onUpload={{this.uploadReplacementFile}}
