update document card

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -150,11 +150,7 @@
           {{! TODO: when created date is absent, the layout seems irregular
                 this will be addressed with new document card styling }}
           <div>
-            {{t "uploaded-at"}}
-            {{moment-format this.piece.created}}
-            {{t "at"}}
-            {{moment-format this.piece.created "HH:mm"}}
-            als <a href="#!">Word document</a>
+            Geüpload als <a href="#!">Word document</a>
           </div>
         </div>
         {{/if}}
