feat: make access level pills of previous versions editable

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -172,9 +172,15 @@
                         </h6>
                       {{/if}}
                       <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center"></div>
-                      <AccessLevelPill
-                        @accessLevel={{await piece.accessLevel}}
-                      />
+                      <div class="auk-o-flex auk-o-flex--vertical-center">
+                        <AccessLevelPill
+                          @accessLevel={{piece.accessLevel}}
+                          @isEditable={{true}}
+                          @onChangeAccessLevel={{fn this.changeAccessLevelOfPiece piece}}
+                          @onConfirmChangeAccessLevel={{fn this.saveAccessLevelOfPiece piece}}
+                          @onCancelChangeAccessLevel={{this.reloadAccessLevel}}
+                        />
+                      </div>
                     </div>
                     <div class="vlc-document-card-item__meta au-u-muted">
                       {{!-- no piece.created in legacy data --}}
