--- a/app/templates/agenda/agendaitems/agendaitem/documents.hbs
+++ b/app/templates/agenda/agendaitems/agendaitem/documents.hbs
@@ -52,7 +52,7 @@
     </div>
   {{/if}}
 {{/unless}}
-{{#if this.currentSession.isEditor}}
+{{#if (user-may "manage-documents")}}
   <div class="auk-u-mb-4">
     <Auk::Button
       @skin="tertiary"
