--- a/app/components/utils/overviews-header-print.hbs
+++ b/app/components/utils/overviews-header-print.hbs
@@ -10,7 +10,7 @@
           </div>
           <Auk::Tabs @reversed={{true}}>
             <Auk::Tab @models={{this.modelsForHierarchicalBack}} @route={{"agenda.agendaitems"}} @isHierarchicalBack={{true}} />
-            {{#if this.currentSession.isEditor}}
+            {{#if (user-may "manage-agendaitems")}}
               <Auk::Tab
                 @route={{this.routeModelAgendaitems}}
                 @model={{await this.model.id}}
