--- a/app/templates/agenda/documents.hbs
+++ b/app/templates/agenda/documents.hbs
@@ -12,7 +12,7 @@
         <Toolbar.Group @position="right" as |Group|>
           {{#if this.model.length}}
             <Group.Item>
-              {{#if this.currentSession.isEditor}}
+              {{#if (user-may "manage-documents")}}
                 <Auk::Button
                   @icon="pencil"
                   {{on "click" this.openBatchDetails}}
@@ -37,7 +37,7 @@
         @didDeleteContainer={{this.refresh}}
       />
 
-      {{#if this.currentSession.isEditor}}
+      {{#if (user-may "manage-documents")}}
         <div class="auk-u-mb-4">
           <Auk::Button
             data-test-route-agenda-documents-add-documents
