--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -12,7 +12,7 @@
         <Toolbar.Group @position="right" as |Group|>
           {{#if this.model.pieces.length}}
             <Group.Item>
-              {{#if this.currentSession.isEditor}}
+              {{#if (user-may "manage-documents")}}
                 <Auk::Button
                   data-test-route-cases---subcase-documents-batch-edit
                   @icon="pencil"
@@ -43,7 +43,7 @@
         </div>
       {{/if}}
 
-      {{#if this.currentSession.isEditor}}
+      {{#if (user-may "manage-documents")}}
         <div class="auk-u-mb-4">
           <Auk::Button
             data-test-route-cases---subcase-documents-add
