refactor: replace isViewer with appropriate user roles

--- a/app/components/agenda/agenda-header.hbs
+++ b/app/components/agenda/agenda-header.hbs
@@ -33,7 +33,7 @@
         </div>
       </Group.Item>
     </Toolbar.Group>
-    {{#if this.currentSession.isViewer}}
+    {{#if (user-may "view-agenda-actions")}}
       <Toolbar.Group @position="right" as |Group|>
         {{#if (user-may "manage-agenda-versions")}}
           <Group.Item>
