--- a/app/templates/cases/overview.hbs
+++ b/app/templates/cases/overview.hbs
@@ -1,5 +1,5 @@
 {{page-title (t "cases")}}
-<Cases::CasesHeader @didCreateNewCase={{this.navigateToNewCase}} />
+<Cases::CasesHeader @didCreateNewCase={{this.navigateToDecisionmakingFlow}} />
 <div class="auk-scroll-wrapper__body">
   <div class="auk-u-m-8">
     <Auk::Toolbar>
