--- a/app/components/cases/new-case.hbs
+++ b/app/components/cases/new-case.hbs
@@ -1,24 +1,10 @@
 <Auk::Modal::Body>
-  {{#if this.hasError}}
-    <Auk::Alert
-      data-test-new-case-shorttitle-error
-      @skin="error"
-      @icon="alert-triangle"
-      @title={{t "modal-error-alert-title"}}
-      @message={{t "modal-error-alert-message"}}
-    />
-  {{/if}}
-
   <div
-    class="auk-form-group {{if this.hasError "auk-form-group--error"}}"
+    class="auk-form-group"
     data-test-new-case-shorttitle
   >
     <Auk::Label id="case-short-title">{{t "short-title-case"}}</Auk::Label>
-    <Auk::Textarea
-      @value={{this.shortTitle}}
-      @rows="2"
-      aria-labelledby="case-short-title"
-    />
+    <Auk::Textarea @rows="2" @value={{mut this.shortTitle}} />
   </div>
 </Auk::Modal::Body>
 <Auk::Modal::Footer @custom={{true}}>
@@ -34,9 +20,10 @@
       <Group.Item>
         <Auk::Button
           @skin="primary"
+          @disabled={{this.isCreateDisabled}}
           @loading={{this.isLoading}}
           data-test-new-case-save={{true}}
-          {{on "click" this.validateAndCreateCase}}
+          {{on "click" (perform this.createCase)}}
         >
           {{t "create-case"}}
         </Auk::Button>
